Continuado capítulo 2 parte b

--- a/memoria/partes/a/capitulo4.tex
+++ b/memoria/partes/a/capitulo4.tex
@@ -1,4 +1,4 @@
-\chapter{Concluisiones}
+\chapter{Conclusiones}
 \lettrine[lines=1,slope=4pt,findent=0pt]{C}{}omo no podía ser de otra manera, y a modo de aportar nuestra opinión, añadimos en este capítulo las conclusiones obtenidas durante el desarrollo de esta primera parte de la práctica.\\
 
 En primer lugar nos gustaría recalcar que aunque los sistemas de la universidad \emph{\textquotedblleft aparentemente\textquotedblright} poseen grandes ventajas que se han ido comentando a lo largo de este documento, también poseen desventajas que hacen que ninguno de nosotros prefiera un ordenador de la universidad a uno propio.\\
