Corregidas pequeñas erratas cap. 2 parte b

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -84,10 +84,10 @@ Tras la extracción de los requisitos es necesario documentar la estructura de c
 
 UML es un lenguaje de modelado para visualizar, especificar y documentar de forma gráfica cada una de las partes del desarrollo software. \\
 
-En primer lugar diseñaremos un diagrama de clases que permita una visión general de las clases que componen la plataforma y su relación, para después incluir \color{red}un diagrama de casos de uso \color{black}que permite ver de una forma más detallada los requisitos extraídos anteriormente así como su relación con los distintos actores. Para finalizar Analizaremos de forma detallada y mediante diagramas de flujo cada uno de los casos de uso resultantes.\\
+En primer lugar diseñaremos un diagrama de clases que permita una visión general de las clases que componen la plataforma y su relación, para después incluir un diagrama de casos de uso que permite ver de una forma más detallada los requisitos extraídos anteriormente así como su relación con los distintos actores. Para finalizar, analizaremos de forma detallada y mediante diagramas de actividad cada uno de los casos de uso resultantes.\\
 
 \subsection{Diagrama de clases}
-un diagrama de clases es un diagrama estático destinado a la programación orientada a objetos que permite describir las clases de un sistema, así como sus propiedades, operaciones, relaciones entre ellas y herencia.\\
+Un diagrama de clases es un diagrama estático destinado a la programación orientada a objetos que permite describir las clases de un sistema, así como sus propiedades, operaciones, relaciones entre ellas y herencia.\\
 
 A continuación detallamos cada una de las clases que aparecen en el diagrama centrándose en la funcionalidad y las relaciones entre ellas. Para una descripción más en profundidad de las operaciones que implementa ver Manual de uso.\\
 
@@ -107,8 +107,6 @@ A continuación detallamos cada una de las clases que aparecen en el diagrama ce
 
 \textbf{Usuario:} Permite la modificación y visualización de los datos del usuario, como el nombre, el id, la contraseña y los permisos.
 
-
-{\color{red}{\huge PROVISIONAL}}
 
 \begin{landscape}
 \begin{figure}[!h]
