--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -81,8 +81,7 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 	
 \section{Modelado UML}
 Tras la extracción de los requisitos es necesario documentar la estructura de cada una de las partes que componen la plataforma a crear. Para esto usamos el lenguaje de modelado UML.\\
-
-UML es un lenguaje de modelado para visualizar, especificar y documentar de forma gráfica cada una de las partes del desarrollo software. \\
+%UML es un lenguaje de modelado para visualizar, especificar y documentar de forma gráfica cada una de las partes del desarrollo software. \\
 
 En primer lugar diseñaremos un diagrama de clases que permita una visión general de las clases que componen la plataforma y su relación, para después incluir un diagrama de casos de uso que permite ver de una forma más detallada los requisitos extraídos anteriormente así como su relación con los distintos actores. Para finalizar, analizaremos de forma detallada y mediante diagramas de actividad cada uno de los casos de uso resultantes.\\
 
