--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -25,7 +25,7 @@ if(user != null){ // Si el usuario ha introducido sus datos correctamente y ést
 }
 \end{verbatim}
 
-Una vez conectados podremos realizar acciones como buscar un archivo en concreto, leer, escribir, o crear carpetas. Una explicación más detallada precisan los permisos que pueden tener los distintos usuarios \COLOR{RED} SIN ACABAR
+Una vez conectados podremos realizar acciones como buscar un archivo en concreto, leer, escribir, o crear carpetas. Una explicación más detallada precisan los permisos que pueden tener los distintos usuarios \color{red}SIN ACABAR
 \color{black}
 \section{Funcionalidades y ejemplos}
 \subsection{Iniciar sesión}
