[FIX] Ya compila
Faltaba \end{tabular}

--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -55,6 +55,7 @@ Número & Permiso  & Descripción \\
 1& Escribir & El usuario puede añadir datos a la pizarra\\
 2& Buscar & El usuario puede buscar archivos en la pizarra\\
 \hline
+\end{tabular}
 
 Dichos permisos pueden ser modificados por un usuario Administrador mediante agente.gestionarPermisos() que invocará a pizarra.gestionarPermisos() y finalmente a Nivel.cambiarPermiso() donde se podrán especificar los nuevos permisos del usuario.
 \subsection{Configurar pizarra}
